# ffaudio2json

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: cd.yml  ci.yml  publish.yml
ffaudio2json-cli/: Cargo.toml
ffaudio2json-cli/examples/: waveform.rs
ffaudio2json-cli/src/: main.rs  options.rs
src/: audio.rs  buffer.rs  channels.rs  config.rs  error.rs  generator.rs  lib.rs  util.rs
tests/: common.rs  test_empty_audio.rs  test_mono.rs  test_short_file.rs  test_stereo.rs  test_surround_sound.rs
tests/data/: airboat_gun_lastshot1_1khz_mono.flac  airboat_gun_lastshot1_1khz_stereo.flac
