[package]
name = "ffaudio2json"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io"]
license = "MIT OR Apache-2.0"
description = "Convert audio files to JSON waveforms using FFmpeg"
repository = "https://github.com/WilliamVenner/ffaudio2json"
readme = "README.md"

[features]
default = []
build-ffmpeg = ["ffmpeg-next/build"]
static-ffmpeg = ["ffmpeg-next/static"]

[workspace]
members = ["ffaudio2json-cli"]
default-members = ["ffaudio2json-cli"]

[patch.crates-io.ffmpeg-next]
git = "https://github.com/zmwangx/rust-ffmpeg.git"
rev = "1922ed055f96c368628e5b543ec4c59ddfa01ff4"

[patch.crates-io.ffmpeg-sys-next]
git = "https://github.com/WilliamVenner/rust-ffmpeg-sys.git"
branch = "feat/mingw-build-ffmpeg"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
ffmpeg-next = { version = "7.0", default-features = false, features = [
	"codec",
	"format",
	"software-resampling",
] }
thiserror = "1"
log = "0.4"
strum_macros = "0.26"
strum = "0.26"
derive_builder = "0.20"

[build-dependencies]
build-data = "0.2"

[dev-dependencies]
serde_json = "1"
stderrlog = "0.6"
log = "0.4"
