[package]
name = "ffaudio2json-cli"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io"]
license = "MIT OR Apache-2.0"
description = "Convert audio files to JSON waveforms using FFmpeg"
repository = "https://github.com/WilliamVenner/ffaudio2json"
publish = false

[[bin]]
name = "ffaudio2json"
path = "src/main.rs"

[dependencies]
ffaudio2json = { path = "../" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
